--- a/stencil-library/src/components/my-btn/my-btn.css
+++ b/stencil-library/src/components/my-btn/my-btn.css
@@ -9,4 +9,6 @@ button{
   border-radius: var(--border-btn-radius);
   padding: 5px 10px;
   background-color:var(--btn-color);
+  border: none;
+  color: white;
 }
