--- a/spa-home/src/app/app.component.scss
+++ b/spa-home/src/app/app.component.scss
@@ -8,7 +8,7 @@
 }
 .container {
   margin-top: 40px;
-  margin-left: 280px;
+  margin-left: 18%;
   margin-right: 40px;
   margin-bottom: 40px;
 }
@@ -27,5 +27,16 @@ p {
   font-family:var(--general-general-text-font);
   font-size: var(--general-general-text-size);
 }
+
+@media only screen and (max-width: 768px) {
+  .container{
+      margin-top: 40px;
+      margin-left: 30%;
+      margin-right: 40px;
+  }
+}
+
+
+
 
 
