--- a/spa-tools/src/app/app.component.scss
+++ b/spa-tools/src/app/app.component.scss
@@ -1,7 +1,7 @@
 
 .container{
     margin-top: 40px;
-    margin-left: 300px;
+    margin-left: 20%;
     margin-right: 40px;
     text-align: justify;
 
@@ -25,5 +25,13 @@
         font-size: var(--general-general-h3-size);
     }
 }
+
+@media only screen and (max-width: 768px) {
+    .container{
+        margin-top: 40px;
+        margin-left: 50%;
+        margin-right: 40px;
+    }
+  }
 
 
