--- a/spa-web/src/app/app.component.scss
+++ b/spa-web/src/app/app.component.scss
@@ -6,9 +6,17 @@
 
 .container{
     margin-top: 40px;
-    margin-left: 280px;
+    margin-left: 20%;
     margin-right: 40px;
 }
+
+@media only screen and (max-width: 768px) {
+    .container{
+        margin-top: 40px;
+        margin-left: 50%;
+        margin-right: 40px;
+    }
+  }
 
 h1{
     font-size: var(--general-general-h1-size);
