--- a/server-express/public/css/colors/variables-dark-colors.css
+++ b/server-express/public/css/colors/variables-dark-colors.css
@@ -11,4 +11,5 @@
 --general-color-text-code:#fff;
 --general-color-code:#2d2b57;
 --general-color-hover-link:#0d8af1;
---general-color-link:#4c00ff;}
+--general-color-link:#4c00ff;
+--general-btn-primary:#1e90ff;}
