--- a/spa-library/src/app/app.component.html
+++ b/spa-library/src/app/app.component.html
@@ -4,7 +4,7 @@
   <p translate> libraries.init_text</p>
 
   <div>
-    <h2 translate>libraries.taduccion_tittle</h2>
+    <h2 translate>libraries.translate.translate_tittle</h2>
     <app-translate-react></app-translate-react>
     <app-translate-vue></app-translate-vue>
     <app-translate-angular></app-translate-angular>
@@ -13,6 +13,7 @@
   <div>
 
     <app-style-dictionary></app-style-dictionary>
+    <app-lib-storybook></app-lib-storybook>
   </div>
   
 </div>
