--- a/spa-library/src/app/translate-angular/translate-angular.component.html
+++ b/spa-library/src/app/translate-angular/translate-angular.component.html
@@ -1,12 +1,12 @@
-<h3 translate>libraries.angular.tittle</h3>
-<p translate>libraries.angular.text_install</p>
+<h3 translate>libraries.translate.angular.tittle</h3>
+<p translate>libraries.translate.angular.text_install</p>
 <my-code text_code="{{ install_library_ngx_translate_core_angular }}" />
-<p translate>libraries.angular.text_2</p>
+<p translate>libraries.translate.angular.text_2</p>
 <my-code text_code="{{ code_createTranslateLoader }}" />
-<p translate>libraries.angular.text_3</p>
+<p translate>libraries.translate.angular.text_3</p>
 <my-code text_code="{{ code_translateModule }}" />
 
-<p translate>libraries.angular.text_4</p>
+<p translate>libraries.translate.angular.text_4</p>
 <div class="container_img">
   <img
     class="container_img_medium"
@@ -15,7 +15,7 @@
   />
 </div>
 
-<p translate>libraries.angular.text_5</p>
+<p translate>libraries.translate.angular.text_5</p>
 
 
 <div class="container_img">
