--- a/spa-library/src/app/translate-react/translate-react.component.html
+++ b/spa-library/src/app/translate-react/translate-react.component.html
@@ -1,8 +1,8 @@
-<h3 translate>libraries.react.tittle</h3>
-<p translate>libraries.react.text</p>
+<h3 translate>libraries.translate.react.tittle</h3>
+<p translate>libraries.translate.react.text</p>
 <my-code text_code="{{install_library_i18n}}"></my-code>
-<p translate>libraries.react.text_2</p>
+<p translate>libraries.translate.react.text_2</p>
 <div class="container_img">
     <img class="container_img_medium" src="http://localhost:3000/images/spa-library/i18n-react.png" alt="i18n">
 </div>
-<p translate>libraries.react.text_3</p>
+<p translate>libraries.translate.react.text_3</p>
