--- a/spa-web/src/app/root-app/spa-root-info.html
+++ b/spa-web/src/app/root-app/spa-root-info.html
@@ -34,7 +34,7 @@
 
 <div class="container_img">
   <img
-    class="container_img_medium"
+    class="container_img_big"
     src="http://localhost:3000/images/spa-web/code_import_webcomponent_cdn.png"
     alt="import web component CDN"
   />
