--- a/spa-library/src/app/app.component.scss
+++ b/spa-library/src/app/app.component.scss
@@ -36,6 +36,10 @@ h3 {
     max-width: 1000px;
     max-height: 500px;
   }
+  &_big {
+    max-width: 1200px;
+    max-height: 700px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
