--- a/spa-library/src/app/translate-vue/translate-vue.component.html
+++ b/spa-library/src/app/translate-vue/translate-vue.component.html
@@ -1,8 +1,8 @@
-<h3 translate>libraries.vue.tittle</h3>
-<p translate>libraries.vue.text_init</p>
+<h3 translate>libraries.translate.vue.tittle</h3>
+<p translate>libraries.translate.vue.text_init</p>
 <my-code text_code="{{ install_library_i18n_vue }}" />
 
-<p translate>libraries.vue.text_2</p>
+<p translate>libraries.translate.vue.text_2</p>
 
 <div class="container_img">
   <img
@@ -11,7 +11,7 @@
     alt="i18n"
   />
 </div>
-<p translate>libraries.vue.text_3</p>
+<p translate>libraries.translate.vue.text_3</p>
 
 <div class="container_img">
   <img
