--- a/server-express/public/css/colors/variables-general-colors.css
+++ b/server-express/public/css/colors/variables-general-colors.css
@@ -1,15 +1,18 @@
 :root{
---nav-logo-color:#fff;
---nav-menu-color:#11101d;
---nav-text-color:#fff;
+--nav-logo-color:#272343;
+--nav-menu-color:#e3f6f5;
+--nav-text-color:#272343;
 --nav-btn-hover:#4c4ce9;
 --nav-hover-a:#fff;
---nav-btn-color:#D0E2ED;
---general-background-app:#dcdada;
---general-text-color:#000;
---general-btn-color:#11101d;
---general-color-code:#2d2b57;
+--nav-btn-color:#ffd803;
+--general-background-app:#fffffe;
+--general-text-color:#2d334a;
+--general-tittle-color:#272343;
+--general-color-code:#bae8e8;
 --general-color-link:#4c00ff;
 --general-color-hover-link:#0d8af1;
---general-color-text-code:#fff;
---general-btn-primary:#1e90ff;}
+--general-color-text-code:#272343;
+--general-btn-primary:#ffd803;
+--general-color-primary-separate-bar:#272343;
+--general-color-secondary-separate-bar:#2B7E3D;
+--general-color-tertiary-separate-bar:#5E5E5E;}
