--- a/server-express/public/css/colors/variables-dark-colors.css
+++ b/server-express/public/css/colors/variables-dark-colors.css
@@ -12,4 +12,7 @@
 --general-color-code:#2d2b57;
 --general-color-hover-link:#0d8af1;
 --general-color-link:#4c00ff;
---general-btn-primary:#1e90ff;}
+--general-btn-primary:#1e90ff;
+--general-color-primary-separate-bar:#1e90ff;
+--general-color-secondary-separate-bar:#2B7E3D;
+--general-color-tertiary-separate-bar:#FFF;}
