--- a/server-express/public/css/colors/variables-dark-colors.css
+++ b/server-express/public/css/colors/variables-dark-colors.css
@@ -1,18 +1,18 @@
 :root{
---nav-logo-color:#fff;
---nav-menu-color:#555555;
---nav-text-color:#fff;
---nav-btn-hover:#003fae;
---nav-hover-a:#fff;
---nav-btn-color:#003fae;
---general-background-app:#050505;
---general-text-color:#fff;
---general-btn-color:#000;
---general-color-text-code:#fff;
---general-color-code:#2d2b57;
+--nav-menu-color:#242629;
+--nav-logo-color:#fffffe;
+--nav-text-color:#fffffe;
+--nav-btn-color:#7f5af0;
+--nav-btn-hover:#fffffe;
+--nav-hover-a:#16161A;
+--general-background-app:#16161a;
+--general-tittle-color:#fffffe;
+--general-text-color:#94a1b2;
+--general-color-text-code:#94a1b2;
+--general-color-code:#242629;
 --general-color-hover-link:#0d8af1;
---general-color-link:#4c00ff;
---general-btn-primary:#1e90ff;
---general-color-primary-separate-bar:#1e90ff;
---general-color-secondary-separate-bar:#2B7E3D;
+--general-color-link:#2cb67d;
+--general-btn-primary:#7f5af0;
+--general-color-primary-separate-bar:#010101;
+--general-color-secondary-separate-bar:#2cb67d;
 --general-color-tertiary-separate-bar:#FFF;}
