--- a/server-express/public/css/colors/variables-general-colors.css
+++ b/server-express/public/css/colors/variables-general-colors.css
@@ -9,7 +9,7 @@
 --general-text-color:#2d334a;
 --general-tittle-color:#272343;
 --general-color-code:#bae8e8;
---general-color-link:#4c00ff;
+--general-color-link:#ffd803;
 --general-color-hover-link:#0d8af1;
 --general-color-text-code:#272343;
 --general-btn-primary:#ffd803;
