--- a/spa-home/src/app/app.component.scss
+++ b/spa-home/src/app/app.component.scss
@@ -5,6 +5,7 @@
   margin-bottom: 20px;
   font-size: var(--general-general-h1-size);
   font-family: var(--general-general-text-font);
+  color: var(--general-tittle-color);
 }
 .container {
   margin-top: 40px;
