--- a/spa-library/src/app/app.component.scss
+++ b/spa-library/src/app/app.component.scss
@@ -13,14 +13,17 @@ p {
 
 h1 {
   font-size: var(--general-general-h1-size);
+  color: var(--general-tittle-color);
 }
 
 h2 {
   font-size: var(--general-general-h2-size);
+  color: var(--general-tittle-color);
 }
 
 h3 {
   font-size: var(--general-general-h3-size);
+  color: var(--general-tittle-color);
 }
 
 .container_img {
