--- a/spa-root/src/index.ejs
+++ b/spa-root/src/index.ejs
@@ -7,6 +7,7 @@
   <link rel="icon" href="http://localhost:3000/images/icon-app.png">
   <link rel="stylesheet" href="http://localhost:3000/css/variables.css">
   <link rel="stylesheet" id="theme-colors" href="http://localhost:3000/css/colors/variables-general-colors.css">
+  <link rel="stylesheet" id="colors-borders" href="http://localhost:3000/css/borders/variables-border.css">
   <title>NTTDATA-FRONTEND</title>
   <script src="https://cdn.jsdelivr.net/npm/regenerator-runtime@0.13.7/runtime.min.js"></script>
   <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: localhost:*; script-src 'unsafe-inline' 'unsafe-eval' https: localhost:*; connect-src https: localhost:* ws://localhost:* ws://192.168.1.32:8081; style-src 'unsafe-inline' https: http://localhost:3000; object-src 'none';">
@@ -27,8 +28,8 @@
   <script type="systemjs-importmap" src="/importmap.json"></script> 
   <% } %>
 
-  <script type="module"  src='https://cdn.jsdelivr.net/npm/stencil-library-web@0.0.44/dist/stencil-library/stencil-library.esm.js'></script>
-  <link rel="stylesheet"  type="text/css""  href='https://cdn.jsdelivr.net/npm/stencil-library-web@1.0.0/dist/stencil-library/stencil-library.css'></link>
+  <script type="module"  src='https://cdn.jsdelivr.net/npm/stencil-library-web@0.0.52/dist/stencil-library/stencil-library.esm.js'></script>
+  <link rel="stylesheet"  type="text/css"  href='https://cdn.jsdelivr.net/npm/stencil-library-web@0.0.52/dist/stencil-library/stencil-library.css'></link>
   <script src="https://kit.fontawesome.com/d9bf3bb30e.js" crossorigin="anonymous"></script>
   
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"></link>
