--- a/spa-tools/src/app/app.component.scss
+++ b/spa-tools/src/app/app.component.scss
@@ -13,16 +13,18 @@
 
     h1{
         font-size:var(--general-general-h1-size);
+        color: var(--general-tittle-color);
 
     }
 
     h2{
         font-size:var(--general-general-h2-size);
-
+        color: var(--general-tittle-color);
     }
 
     h3{
         font-size: var(--general-general-h3-size);
+        color: var(--general-tittle-color);
     }
 }
 
