--- a/spa-web/src/app/app.component.scss
+++ b/spa-web/src/app/app.component.scss
@@ -21,16 +21,19 @@
 h1{
     font-size: var(--general-general-h1-size);
     margin-bottom: 10px;
+    color: var(--general-tittle-color);
 }
 
 h2{
     font-size: var( --general-general-h2-size);
     margin-bottom: 10px;
+    color: var(--general-tittle-color);
 }
 
 h3{
     font-size: var( --general-general-h3-size);
     margin-bottom: 10px;
+    color: var(--general-tittle-color);
 }
 
 
