--- a/stencil-library/src/components/separate-bar/separate-bar.css
+++ b/stencil-library/src/components/separate-bar/separate-bar.css
@@ -5,6 +5,6 @@
 hr{
   height: 5px;
   border-radius: 4px;
-  background-color: blue;
+  background-color: var(--stroke-color);
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
