--- a/server-express/public/css/fontFamilies/variables-fontFamilies.css
+++ b/server-express/public/css/fontFamilies/variables-fontFamilies.css
@@ -1,9 +1,9 @@
 /**
  * Do not edit directly
- * Generated on Wed, 15 Nov 2023 08:28:07 GMT
+ * Generated on Wed, 15 Nov 2023 13:03:34 GMT
  */
 
 :root {
   --general-general-text-font: sans-serif;
-  --general-general-text-code: Courier New;
+  --general-general-text-code: Source Code Pro;
 }
