--- a/server-express/public/css/variables/variables.css
+++ b/server-express/public/css/variables/variables.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Wed, 15 Nov 2023 08:28:07 GMT
+ * Generated on Wed, 15 Nov 2023 13:03:33 GMT
  */
 
 :root {
@@ -13,7 +13,7 @@
   --general-general-text-size: 1.25rem;
   --general-general-h4: 1rem;
   --general-general-btn-border-radius: 5px;
-  --general-general-text-code: Courier New;
+  --general-general-text-code: Source Code Pro;
   --general-icon-ui-house: fa-solid fa-house;
   --general-icon-ui-info: fa-solid fa-circle-info;
   --general-icon-ui-tools: fa-solid fa-screwdriver-wrench;
