--- a/spa-home/src/app/app.component.html
+++ b/spa-home/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1 translate>home.tittle</h1>
-  <hr>
+  <separate-bar></separate-bar>
 
   <div class="container2">
     <p translate>home.init</p>
