--- a/stencil-library/src/components/li-nav/li-nav.css
+++ b/stencil-library/src/components/li-nav/li-nav.css
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   font-family: var(--text-fontFamily);
   color: var(--text-color-nav);
+  font-size: var(--text-nav-font-size);
 }
 
 .nav-item{
