--- a/server-express/public/css/colors/variables-dark-colors.css
+++ b/server-express/public/css/colors/variables-dark-colors.css
@@ -2,9 +2,9 @@
 --nav-menu-color:#242629;
 --nav-logo-color:#fffffe;
 --nav-text-color:#fffffe;
---nav-btn-color:#7f5af0;
---nav-btn-hover:#fffffe;
 --nav-hover-a:#16161A;
+--nav-btn-color:#7f5af0;
+--nav-hover-link:#7f5af0;
 --general-background-app:#16161a;
 --general-tittle-color:#fffffe;
 --general-text-color:#94a1b2;
