--- a/server-express/public/css/colors/variables-general-colors.css
+++ b/server-express/public/css/colors/variables-general-colors.css
@@ -2,7 +2,7 @@
 --nav-logo-color:#272343;
 --nav-menu-color:#e3f6f5;
 --nav-text-color:#272343;
---nav-btn-hover:#4c4ce9;
+--nav-hover-link:#ffd803;
 --nav-hover-a:#fff;
 --nav-btn-color:#ffd803;
 --general-background-app:#fffffe;
