--- a/server-express/public/css/fontSizes/variables-fontSizes.css
+++ b/server-express/public/css/fontSizes/variables-fontSizes.css
@@ -1,10 +1,10 @@
 /**
  * Do not edit directly
- * Generated on Wed, 15 Nov 2023 13:03:34 GMT
+ * Generated on Wed, 15 Nov 2023 15:03:31 GMT
  */
 
 :root {
-  --general-nav-font-size: 20px;
+  --general-nav-font-size: 1rem;
   --general-general-h1-size: 2rem;
   --general-general-h2-size: 1.5rem;
   --general-general-h3-size: 1.25rem;
