change colors + add logo nav

--- a/server-express/public/css/colors/variables-dark-colors.css
+++ b/server-express/public/css/colors/variables-dark-colors.css
@@ -15,4 +15,5 @@
 --general-btn-primary:#7f5af0;
 --general-color-primary-separate-bar:#010101;
 --general-color-secondary-separate-bar:#2cb67d;
---general-color-tertiary-separate-bar:#FFF;}
+--general-color-tertiary-separate-bar:#FFF;
+--general-color-btn-text:#fffffe;}
