--- a/server-express/public/css/colors/variables-general-colors.css
+++ b/server-express/public/css/colors/variables-general-colors.css
@@ -15,4 +15,5 @@
 --general-btn-primary:#ffd803;
 --general-color-primary-separate-bar:#272343;
 --general-color-secondary-separate-bar:#2B7E3D;
---general-color-tertiary-separate-bar:#5E5E5E;}
+--general-color-tertiary-separate-bar:#5E5E5E;
+--general-color-btn-text:#272343;}
