--- a/server-express/public/css/colors/variables-general-colors.css
+++ b/server-express/public/css/colors/variables-general-colors.css
@@ -1,6 +1,6 @@
 :root{
 --nav-logo-color:#272343;
---nav-menu-color:#e3f6f5;
+--nav-menu-color:#bae8e8;
 --nav-text-color:#272343;
 --nav-hover-link:#ffd803;
 --nav-hover-a:#fff;
@@ -8,7 +8,7 @@
 --general-background-app:#fffffe;
 --general-text-color:#2d334a;
 --general-tittle-color:#272343;
---general-color-code:#bae8e8;
+--general-color-code:#e3f6f5;
 --general-color-link:#ffd803;
 --general-color-hover-link:#0d8af1;
 --general-color-text-code:#272343;
