--- a/spa-library/src/app/app.component.html
+++ b/spa-library/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1 translate>libraries.tittle</h1>
-  <hr>
+  <separate-bar></separate-bar>
   <p translate> libraries.init_text</p>
 
   <div>
