--- a/spa-tools/src/app/app.component.html
+++ b/spa-tools/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div  class="container">
   <h1 translate>tools.tittle</h1>
-  <hr>
+  <separate-bar></separate-bar>
   <p translate>tools.text_init</p>
   <app-git-hub></app-git-hub>
   <app-figma></app-figma>
