--- a/spa-root/src/index.ejs
+++ b/spa-root/src/index.ejs
@@ -28,7 +28,7 @@
   <script type="systemjs-importmap" src="/importmap.json"></script> 
   <% } %>
 
-  <script type="module"  src='https://cdn.jsdelivr.net/npm/stencil-library-web@0.0.55/dist/stencil-library/stencil-library.esm.js'></script>
+  <script type="module"  src='https://cdn.jsdelivr.net/npm/stencil-library-web@0.0.56/dist/stencil-library/stencil-library.esm.js'></script>
   <link rel="stylesheet"  type="text/css"  href='https://cdn.jsdelivr.net/npm/stencil-library-web@0.0.55/dist/stencil-library/stencil-library.css'></link>
   <script src="https://kit.fontawesome.com/d9bf3bb30e.js" crossorigin="anonymous"></script>
   
@@ -51,6 +51,12 @@
     color: var(--general-text-color);
     font-family: var(--general-general-text-font);
   }
+  
+  p {
+  text-align: justify;
+  font-size: var(--general-general-text-size);
+  }
+
 </style>
 <body>
   <noscript>
