--- a/spa-web/src/app/app.component.html
+++ b/spa-web/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h1 translate>web.tittle</h1>
-  <hr />
+  <separate-bar></separate-bar>
   <h2 translate>web.first</h2>
 
   <p translate>web.start_text</p>
