--- a/server-express/public/css/colors/variables-general-colors.css
+++ b/server-express/public/css/colors/variables-general-colors.css
@@ -1,6 +1,6 @@
 :root{
 --nav-logo-color:#272343;
---nav-menu-color:#bae8e8;
+--nav-menu-color:#0F5888;
 --nav-text-color:#272343;
 --nav-hover-link:#ffd803;
 --nav-hover-a:#fff;
