--- a/server-express/public/css/colors/variables-dark-colors.css
+++ b/server-express/public/css/colors/variables-dark-colors.css
@@ -1,5 +1,5 @@
 :root{
---nav-menu-color:#242629;
+--nav-menu-color:#0AF034;
 --nav-logo-color:#fffffe;
 --nav-text-color:#fffffe;
 --nav-hover-a:#16161A;
