--- a/server-express/public/css/colors/variables-general-colors.css
+++ b/server-express/public/css/colors/variables-general-colors.css
@@ -1,7 +1,7 @@
 :root{
---nav-logo-color:#272343;
+--nav-logo-color:#FFF;
 --nav-menu-color:#070E27;
---nav-text-color:#272343;
+--nav-text-color:#FFF;
 --nav-hover-link:#ffd803;
 --nav-hover-a:#fff;
 --nav-btn-color:#ffd803;
